# szkopul_cwiczenia_kl_3

./: CMakeLists.txt  README.md  main.cpp
Zadania/anm/: anm.cpp  anm.h
Zadania/kwdrt1n/: kwdrt1n.cpp  kwdrt1n.h
Zadania/mys/: mys.cpp  mys.h
Zadania/prof/: prof.cpp  prof.h
Zadania/tmp/: tmp.cpp  tmp.h
